# benchmark-serialization

./: .benchmark-serialization-static.spec  .gitignore  .temp.c  CMakeLists.txt  README.md  benchmark-serialisation.spec  benchmark-serialization-dynamic.spec  main.c  main.cpp  main.h  sensordata.pb-c.c  sensordata.pb-c.h  sensordata.proto  temp.c
bench_conf/: bench-conf.c  bench.h
bench_option/: bench-option.h  option-cpu.c  option-timer.c  utilities-fct.c
doc/: resultats_bench.ods  resultats_benchmark.odt  sample.json  short_results_bench.odt
include/: config-parsing.h  config.h  data.h  parse-cbor.h  parse-json.h  parse-jsoncpp.hpp  parse-protobuf.h  parse-xdr.h  serializer.h  sp70c-data-handle.h  struct-parsing.h  udpServer.h
src/: parse-cbor.c  parse-json.c  parse-jsonc.c  parse-protobuf.c  parse-xdr.c  sp70c-data-handle.c  udpServer.c
wrap_cbor/src/: parse-cbor.c
wrap_fastjson/src/: parse-fastjson.c
wrap_jsonc/src/: parse-jsonc.c
wrap_jsoncpp/src/: parse-jsoncpp.cpp
wrap_jsoncustom/inc/: mjson.h  parse-jsoncustom.h
wrap_jsoncustom/src/: parse-jsoncustom.c
wrap_jsonstring/inc/: parse-jsonstring.h
wrap_jsonstring/src/: mjson.c  parse-jsonstring.c
wrap_xdr/src/: parse-xdr.c
wrappers/wrap_c/: parse-c.c  parse-c.h
wrappers/wrap_cbor/: parse-cbor.c
wrappers/wrap_fastjson/: parse-fastjson.c  parse-fastjson.h
wrappers/wrap_jsmn/: wrap-jsmn.c  wrap-jsmn.h
wrappers/wrap_jsonc/: parse-jsonc.c  parse-jsonc.h
wrappers/wrap_jsoncpp/: parse-jsoncpp.cpp  parse-jsoncpp.hpp
wrappers/wrap_jsonstring/: parse-jsonstring.c  parse-jsonstring.h
wrappers/wrap_protobuf/: parse-protobuf.c  parse-protobuf.h
wrappers/wrap_xdr/: parse-xdr.c  parse-xdr.h
